--- a/index.html
+++ b/index.html
@@ -32,9 +32,12 @@
 <button id="uploadButton">Upload</button>
 <p id="message"></p>
 
+<textarea id="jobDesc" rows="4" cols="50" placeholder="Enter job description here..."></textarea>
+
 <script>
     document.getElementById('uploadButton').addEventListener('click', async () => {
         const fileInput = document.getElementById('fileInput');
+        const jobDesc = document.getElementById('jobDesc').value;
         const message = document.getElementById('message');
 
         if (fileInput.files.length === 0) {
@@ -51,6 +54,7 @@
 
         const formData = new FormData();
         formData.append('file', file);
+        formData.append('job_desc', jobDesc);
 
         try {
             const response = await fetch('https://resumexpert-dev.onrender.com/upload', {
