--- a/index.html
+++ b/index.html
@@ -1,77 +1,142 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PDF Upload</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 20px;
-        }
-        input[type="file"] {
-            margin-bottom: 10px;
-        }
-        button {
-            padding: 10px 15px;
-            background-color: #4CAF50;
-            color: white;
-            border: none;
-            cursor: pointer;
-        }
-        button:hover {
-            background-color: #45a049;
-        }
-    </style>
+    <title>ResumeXpert</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <header class="header">
+        <img src="ResumeXpert.png" alt="ResumeXpert Logo" class="logo">
+        <h1 class="title">RESUMEXPERT</h1>
+    </header>
 
-<h1>Upload PDF File</h1>
-<input type="file" id="fileInput" accept="application/pdf">
-<br>
-<button id="uploadButton">Upload</button>
-<p id="message"></p>
+    <main class="main-content">
+        <div class="circle-icon">
+            <img src="logo.png" alt="Search Icon">
+        </div>
 
-<textarea id="jobDesc" rows="4" cols="50" placeholder="Enter job description here..."></textarea>
+        <div class="upload-container">
+            <div class="upload-section">
+                <label for="resume">UPLOAD (PDF):</label>
+                <div class="upload-box">
+                    <p>Drop your resume here<br>or choose a file.</p>
+                    <input type="file" id="resume" accept="application/pdf">
+                </div>
+            </div>
 
-<script>
-    document.getElementById('uploadButton').addEventListener('click', async () => {
-        const fileInput = document.getElementById('fileInput');
-        const jobDesc = document.getElementById('jobDesc').value;
-        const message = document.getElementById('message');
+            <div class="file-info-box" id="file-info-box">
+              <p id="file-name"></p>
+          </div>
 
-        if (fileInput.files.length === 0) {
-            message.textContent = 'Please select a PDF file to upload.';
-            return;
-        }
+            <div class="job-description-section">
+                <label for="job-description">JOB DESCRIPTION:</label>
+                <textarea id="job-description" placeholder="Enter job description here..."></textarea>
+            </div>
 
-        const file = fileInput.files[0];
+            <div class="button-group">
+                <button class="upload-btn">Upload</button>
+                <button class="analyze-btn">Analyze</button>
+            </div>
+        </div>
+    </main>
 
-        if (file.type !== 'application/pdf') {
-            message.textContent = 'Only PDF files are allowed.';
-            return;
-        }
+    <footer class="footer">
+      © ResumeXpert 2025. All rights reserved.
+  </footer>
 
-        const formData = new FormData();
-        formData.append('file', file);
-        formData.append('job_desc', jobDesc);
+  <div class="results" id="results"></div>
 
+  <script>
+    document.querySelector('.analyze-btn').addEventListener('click', async () => {
+      const resultsDiv = document.getElementById('results');
+      resultsDiv.innerHTML = 'Analyzing...';
+  
+      const resumeFile = document.getElementById('resume').files[0];
+      const jobDescription = document.getElementById('job-description').value.trim();
+  
+      // Validate input
+      if (!resumeFile || resumeFile.type !== 'application/pdf') {
+        alert('Please upload a valid PDF resume.');
+        resultsDiv.innerHTML = '';
+        return;
+      }
+  
+      if (!jobDescription) {
+        alert('Please enter a job description.');
+        resultsDiv.innerHTML = '';
+        return;
+      }
+  
+      const formData = new FormData();
+      formData.append('file', resumeFile);
+  
+      try {
+        // Step 1: Upload resume and get extracted text
+        const uploadRes = await fetch('https://resumexpert-dev.onrender.com/upload', {
+          method: 'POST',
+          body: formData
+        });
+  
+        const uploadText = await uploadRes.text();
+        console.log('Raw upload response:', uploadText);
+  
+        if (!uploadRes.ok) throw new Error('Upload failed');
+  
+        let uploadData;
         try {
-            const response = await fetch('https://resumexpert-dev.onrender.com/upload', {
-                method: 'POST',
-                body: formData,
-            });
-
-            if (response.ok) {
-                message.textContent = 'File uploaded successfully!';
-            } else {
-                message.textContent = 'File upload failed. Please try again.';
-            }
-        } catch (error) {
-            message.textContent = 'An error occurred: ' + error.message;
+          uploadData = JSON.parse(uploadText);
+        } catch {
+          throw new Error('Invalid response format from upload');
         }
+  
+        const resumeText = uploadData.resume_text;
+        if (!resumeText) throw new Error('No resume text returned');
+  
+        // Step 2: Analyze resume against job description
+        const analyzeRes = await fetch('https://resumexpert-dev.onrender.com/analyze', {
+          method: 'POST',
+          headers: { 'Content-Type': 'application/json' },
+          body: JSON.stringify({
+            job_description: jobDescription,
+            resume_text: resumeText
+          })
+        });
+  
+        const analyzeText = await analyzeRes.text();
+        console.log('Raw analyze response:', analyzeText);
+  
+        if (!analyzeRes.ok) throw new Error('Analysis failed');
+  
+        const analysis = JSON.parse(analyzeText);
+  
+        // Step 3: Display result
+        resultsDiv.innerHTML = `
+          <div style="border: 1px solid #ccc; padding: 15px; margin-top: 20px; background: #f8f8f8; border-radius: 8px;">
+            <h2>Analysis Results</h2>
+            <p><strong>Match Score:</strong> ${analysis.match_score ?? 'N/A'}</p>
+            <p><strong>Extra Keywords to Add:</strong> ${(analysis.extra_keywords || []).join(', ')}</p>
+            <p><strong>Missing Keywords:</strong> ${(analysis.missing_keywords || []).join(', ')}</p>
+            <h3>Suggested Improvements:</h3>
+            <ul>
+              ${(analysis.suggestions || []).map(s => `
+                <li>
+                  <strong>Issue:</strong> ${s.issue}<br>
+                  <strong>Suggestion:</strong> ${s.suggestion}
+                </li>
+              `).join('')}
+            </ul>
+          </div>
+        `;
+  
+      } catch (error) {
+        console.error(error);
+        resultsDiv.innerHTML = `<p style="color:red;">An error occurred: ${error.message}</p>`;
+      }
     });
-</script>
-
+  </script>
+  
+  
 </body>
 </html>
