--- a/index.html
+++ b/index.html
@@ -3,11 +3,19 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>ResumeXpert Uploader</title>
+  <title>ResumeXpert Analyzer</title>
   <style>
-    body { font-family: Arial, sans-serif; padding: 20px; max-width: 600px; margin: auto; }
+    body { font-family: Arial, sans-serif; padding: 20px; max-width: 700px; margin: auto; }
     label, input, textarea, button { display: block; width: 100%; margin-top: 10px; }
-    #response, #analysis { white-space: pre-wrap; background: #f9f9f9; padding: 10px; margin-top: 20px; border: 1px solid #ccc; }
+    #analysis { margin-top: 20px; }
+    .result-box {
+      border: 1px solid #ccc;
+      background: #f8f8f8;
+      border-radius: 8px;
+      padding: 15px;
+      margin-top: 20px;
+    }
+    ul { padding-left: 20px; }
   </style>
 </head>
 <body>
@@ -24,53 +32,93 @@
     <button type="submit">Upload and Analyze</button>
   </form>
 
-  <div id="response"><strong>Upload Response:</strong><br></div>
-  <div id="analysis"><strong>Analysis Result:</strong><br></div>
+  <div id="analysis"></div>
 
   <script>
     document.getElementById("uploadForm").addEventListener("submit", async function (e) {
       e.preventDefault();
-  
+
       const fileInput = document.getElementById("file");
       const jobDesc = document.getElementById("job_desc").value;
-  
+      const resultsDiv = document.getElementById("analysis");
+      resultsDiv.innerHTML = "Processing...";
+
       if (fileInput.files.length === 0) {
         alert("Please select a file.");
         return;
       }
-  
+
       const formData = new FormData();
       formData.append("file", fileInput.files[0]);
       formData.append("job_desc", jobDesc);
-  
+
       try {
         // POST to /upload
         const uploadRes = await fetch("https://resumexpert-dev.onrender.com/upload", {
           method: "POST",
           body: formData
         });
-  
-        const uploadData = await uploadRes.json();  // ✅ PARSE JSON from /upload
-  
-        document.getElementById("response").innerHTML += JSON.stringify(uploadData, null, 2);
-  
-        // POST to /analyze with the full uploadData as body
+
+        const uploadData = await uploadRes.json();
+
+        // POST to /analyze
         const analyzeRes = await fetch("https://resumexpert-dev.onrender.com/analyze", {
           method: "POST",
           headers: { "Content-Type": "application/json" },
-          body: JSON.stringify(uploadData)  // ✅ send full JSON
+          body: JSON.stringify(uploadData)
         });
-  
-        const analyzeResult = await analyzeRes.json();  // also expect JSON here
-        document.getElementById("analysis").innerHTML += JSON.stringify(analyzeResult, null, 2);
-  
+
+        const analysis = await analyzeRes.json();
+
+        // Build result output
+        resultsDiv.innerHTML = `
+          <div class="result-box">
+            <h2>Analysis Results</h2>
+
+            <ol>
+              <li>
+                <strong>Career Recommendations:</strong>
+                <ul>
+                  <li><strong>Best Match:</strong><br>
+                    Title: ${analysis.career_recommendations?.best_match?.title || 'N/A'}<br>
+                    Reason: ${analysis.career_recommendations?.best_match?.reason || 'N/A'}
+                  </li>
+                  <li><strong>Other Careers:</strong>
+                    <ul>
+                      ${(analysis.career_recommendations?.other_careers || []).map(career => `
+                        <li>
+                          Title: ${career.title}<br>
+                          Reason: ${career.reason}
+                        </li>
+                      `).join('')}
+                    </ul>
+                  </li>
+                </ul>
+              </li>
+
+              <li><strong>Extra Keywords to Add:</strong> ${(analysis.extra_keywords_to_add || []).join(', ')}</li>
+              <li><strong>Match Score:</strong> ${analysis.match_score ?? 'N/A'}</li>
+              <li><strong>Missing Keywords:</strong> ${(analysis.missing_keywords || []).join(', ')}</li>
+              <li>
+                <strong>Suggested Improvements:</strong>
+                <ul>
+                  ${(analysis.suggested_improvements || []).map(s => `
+                    <li>
+                      <strong>Issue:</strong> ${s.issue}<br>
+                      <strong>Suggestion:</strong> ${s.suggestion}
+                    </li>
+                  `).join('')}
+                </ul>
+              </li>
+            </ol>
+          </div>
+        `;
+
       } catch (err) {
-        document.getElementById("response").innerHTML += "<br>Error: " + err;
-        document.getElementById("analysis").innerHTML += "<br>Error: " + err;
+        resultsDiv.innerHTML = `<p style="color: red;">Error: ${err.message}</p>`;
       }
     });
   </script>
-  
 
 </body>
 </html>
