--- a/index.html
+++ b/index.html
@@ -2,151 +2,50 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>ResumeXpert</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>ResumeExpert</title>
   <link rel="stylesheet" href="style.css" />
 </head>
-<body>
-  <header class="header">
-    <img src="ResumeXpert.png" alt="ResumeXpert Logo" class="logo">
-    <h1 class="title">RESUMEXPERT</h1>
-  </header>
+<body class="dark-theme">
 
-  <main class="main-content">
-    <div class="circle-icon">
-      <img src="logo.png" alt="Search Icon">
+  <nav class="navbar">
+    <div class="nav-left">
+      <span class="brand">ResumeExpert</span>
+      <ul class="nav-links">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="upload.html">Analyzer</a></li>
+        <li><a href="#">Ranking</a></li>
+        <li><a href="#">About</a></li>
+      </ul>
     </div>
+    <div class="nav-right">
+      <a href="#" class="login-btn">Log In</a>
+      <a href="#" class="signup-btn">Sign Up</a>
+    </div>
+  </nav>
 
-    <div class="upload-container">
-      <div class="upload-section">
-        <label for="resume">UPLOAD (PDF):</label>
-        <div class="upload-box">
-          <p>Drop your resume here<br>or choose a file.</p>
-          <input type="file" id="resume" accept="application/pdf">
-        </div>
-      </div>
-
-      <div class="file-info-box" id="file-info-box">
-        <p id="file-name"></p>
-      </div>
-
-      <div class="job-description-section">
-        <label for="job-description">JOB DESCRIPTION:</label>
-        <textarea id="job-description" placeholder="Enter job description here..."></textarea>
-      </div>
-
-      <div class="button-group">
-        <button class="process-btn">Upload & Analyze</button>
+  <main class="hero-section">
+    <div class="hero-content">
+      <h1 class="hero-title">
+        Empower your resume<br />
+        with <span class="highlight-purple">AI</span>
+      </h1>
+      <p class="hero-desc">
+        Lorem ipsum dolor sit amet consectetur adipiscing elit facilisi rhoncus, nunc diam nec nulla egestas augue molestie elementum gravida quisque, finibus placerat aptent ridiculus magnis montes pellentesque auctor. Adipiscing dictumst bibendum convallis
+      </p>
+      <div class="hero-buttons">
+        <button onclick="window.location.href='upload.html';" class="btn-primary">Analyze as Applicant</button>
+        <button class="btn-outline">Rank as Recruiter</button>
       </div>
     </div>
-
-    <div id="analysis-output" class="result-box"></div>
+    <div class="hero-image">
+      <img src="career.jpg" alt="Italian Trulli">
+    </div>
   </main>
 
   <footer class="footer">
-    © ResumeXpert 2025. All rights reserved.
+    Copyright © 2025 | All Rights Reserved
   </footer>
 
-  <script>
-    document.getElementById("resume").addEventListener("change", function () {
-      const file = this.files[0];
-      document.getElementById("file-name").textContent = file ? file.name : "";
-    });
-  
-    document.querySelector(".process-btn").addEventListener("click", async function () {
-      const fileInput = document.getElementById("resume");
-      const jobDesc = document.getElementById("job-description").value;
-      const outputDiv = document.getElementById("analysis-output");
-  
-      if (!fileInput.files.length) {
-        alert("Please select a PDF file.");
-        return;
-      }
-  
-      if (!jobDesc.trim()) {
-        alert("Please enter a job description.");
-        return;
-      }
-  
-      const formData = new FormData();
-      formData.append("file", fileInput.files[0]);
-      formData.append("job_desc", jobDesc);
-  
-      outputDiv.innerHTML = `<div class="card loading">Processing...</div>`;
-  
-      try {
-        const uploadRes = await fetch("https://resumexpert-dev.onrender.com/upload", {
-          method: "POST",
-          body: formData
-        });
-  
-        const uploadData = await uploadRes.json();
-  
-        const analyzeRes = await fetch("https://resumexpert-dev.onrender.com/analyze", {
-          method: "POST",
-          headers: { "Content-Type": "application/json" },
-          body: JSON.stringify(uploadData)
-        });
-  
-        const analysis = await analyzeRes.json();
-  
-        outputDiv.innerHTML = `
-          <div class="card result-card">
-            <h2 class="section-title">Analysis Results</h2>
-  
-            <div class="result-section">
-              <h3>1. Career Recommendations</h3>
-              <div class="result-subsection">
-                <p><strong>Best Match:</strong></p>
-                <p>Title: ${analysis.career_recommendations?.best_match?.title || 'N/A'}</p>
-                <p>Reason: ${analysis.career_recommendations?.best_match?.reason || 'N/A'}</p>
-              </div>
-              <div class="result-subsection">
-                <p><strong>Other Careers:</strong></p>
-                <ul>
-                  ${(analysis.career_recommendations?.other_careers || []).map(c => `
-                    <li>
-                      <p><strong>Title:</strong> ${c.title}</p>
-                      <p><strong>Reason:</strong> ${c.reason}</p>
-                    </li>
-                  `).join('')}
-                </ul>
-              </div>
-            </div>
-  
-            <div class="result-section">
-              <h3>2. Extra Keywords to Add</h3>
-              <p>${(analysis.extra_keywords_to_add || []).join(', ') || 'None'}</p>
-            </div>
-  
-            <div class="result-section">
-              <h3>3. Match Score</h3>
-              <p>${analysis.match_score ?? 'N/A'}%</p>
-            </div>
-  
-            <div class="result-section">
-              <h3>4. Missing Keywords</h3>
-              <p>${(analysis.missing_keywords || []).join(', ') || 'None'}</p>
-            </div>
-  
-            <div class="result-section">
-              <h3>5. Suggested Improvements</h3>
-              <ul>
-                ${(analysis.suggested_improvements || []).map(s => `
-                  <li>
-                    <p><strong>Issue:</strong> ${s.issue}</p>
-                    <p><strong>Suggestion:</strong> ${s.suggestion}</p>
-                  </li>
-                `).join('')}
-              </ul>
-            </div>
-          </div>
-        `;
-      } catch (err) {
-        outputDiv.innerHTML = `<div class="card error">Error: ${err.message}</div>`;
-      }
-    });
-  </script>
-  
 </body>
 </html>
