--- a/login system/register.html
+++ b/login system/register.html
@@ -19,7 +19,7 @@
             const username = document.getElementById("reg-username").value;
             const password = document.getElementById("reg-password").value;
 
-            fetch("http://localhost:5000/api/register", {
+            fetch("https://resumexpert-dev.onrender.com/api/register", {
                 method: "POST",
                 headers: {
                     "Content-Type": "application/json"
