--- a/result.html
+++ b/result.html
@@ -11,9 +11,9 @@
     <div class="nav-container">
       <div class="logo">ResumeExpert</div>
       <nav>
-        <a href="#">Home</a>
-        <a href="#" class="active">Analyzer</a>
-        <a href="#">Ranking</a>
+        <a href="index.html">Home</a>
+        <a href="upload.html" class="active">Analyzer</a>
+        <a href="ranking/job-ranking.html">Ranking</a>
         <a href="#">About</a>
       </nav>
       <div class="auth-buttons">
