--- a/upload.html
+++ b/upload.html
@@ -15,13 +15,13 @@
       <span class="brand">ResumeExpert</span>
       <ul class="nav-links">
         <li><a href="index.html">Home</a></li>
-        <li><a href="upload.html">Analyzer</a></li>
-        <li><a href="#">Ranking</a></li>
+        <li><a href="upload.html" class="active">Analyzer</a></li>
+        <li><a href="ranking/job-ranking.html">Ranking</a></li>
         <li><a href="#">About</a></li>
       </ul>
     </div>
     <div class="nav-right">
-      <a href="#" class="login-btn">Log In</a>
+      <a href="login system/login.html" class="login-btn">Log In</a>
       <a href="#" class="signup-btn">Sign Up</a>
     </div>
   </nav>
