--- a/ranking/job-ranking.html
+++ b/ranking/job-ranking.html
@@ -1,11 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Job Rankings</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>ResumeExpert – Upload</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
-<body>
+<body class="dark-theme">
+
+  <!-- Navbar -->
+  <nav class="navbar">
+    <div class="nav-left">
+      <img src="ResumeXpert.png" alt="ResumeXpert Logo" class="logo">
+      <span class="brand">ResumeExpert</span>
+      <ul class="nav-links">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="upload.html" class="active">Analyzer</a></li>
+        <li><a href="ranking/job-ranking.html">Ranking</a></li>
+        <li><a href="#">About</a></li>
+      </ul>
+    </div>
+    <div class="nav-right">
+      <a href="login system/login.html" class="login-btn">Log In</a>
+      <a href="#" class="signup-btn">Sign Up</a>
+    </div>
+  </nav>
+
+
     <div style="margin-bottom: 20px;">
         <button onclick="window.location.href='view-jobs.html'">Back to Jobs</button>
         <button onclick="window.location.href='resumes-ranking.html?jobId=' + jobId">+ Add Resume</button>
